--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="wrapper">
         <div class="container">
-            <img src="img/background.png" class="background">
-            <img src="img/foreground.png" class="foreground">
+            <img src="background.png" class="background">
+            <img src="foreground.png" class="foreground">
             <h1>Eternal Heritage</h1>
         </div>
         <section>
